<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">coody</string>
    <string name="menu_settings">设置</string>
    <string name="step_number">步\t数</string>
    <string name="use_time">用\t时</string>
    <string name="distance">行 程</string>
    <string name="calories">热 量</string>
    <string name="velocity">速 度</string>
    <string name="zero">0</string>
    <string name="double_zero">0.0</string>
    <string name="calories_zero">0.0</string>
    <string name="velocity_zero">0.0</string>
    <string name="km">m</string>
    <string name="calorie">卡路里</string>
    <string name="kilometer_per_hour">m/s</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="cancel">清零</string>
    <string name="daily">今日累积</string>
    <string name="image_star">image_star</string>
    <string name="sunday">星期天</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="month">月\t</string>
    <string name="day">日</string>
    <string name="todo">TODO</string>
    <string name="information">说明</string>
    <string name="settings_title">设置</string>
    <string name="sensitivity">灵敏度：</string>
    <string name="low">低</string>
    <string name="high">高</string>
    <string name="sensitivity_info">灵敏度越高,对身体的动作越敏感.请调节灵敏度来适应不同的体形,路面等因素.</string>
    <string name="step_length">步长:</string>
    <string name="cm">厘米</string>
    <string name="setp_length_info_1">为估算行走的距离和速度，请输入步长</string>
    <string name="setp_length_info_2">(得出的速度和距离较为粗略，仅供参考)</string>
    <string name="weigth">体重:</string>
    <string name="kg">公斤</string>
    <string name="weight_info">为计算消耗的热量(卡路里)，请入体重。</string>
    <string name="save">保存</string>
    <string name="cancle">取消</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>



    <!-- Log In Activity -->
    <string name="login_title_text">登录</string>
    <string name="login_edittext_hint_input_phone">手机号</string>
    <string name="login_edittext_hint_input_password">请输入密码</string>
    <string name="login_button_login">登录</string>
    <string name="login_button_forget_password">忘记密码？</string>
    <string name="login_hint_forget_password">请返回前一界面用验证码登陆</string>
    <string name="login_error_login">登陆失败，请确认网络和用户名密码后重试</string>
    <string name="login_error_phone_null">手机号不能为空</string>

    <string name="forgetpassword_button_send_email">发送邮件</string>
    <string name="forgetpassword_edittext_hint_input_email">请输入E-mail地址</string>
    <string name="forgetpassword_title_text">ForgetPasswordActivity</string>

    <string name="register_title_text">验证码登陆</string>
    <string name="register_check_phone_number">验证手机号</string>
    <string name="register_edittext_phone">手机号</string>
    <string name="register_edittext_check_number">验证码</string>
    <string name="register_button_get_check_number">获取验证码</string>
    <string name="reginter_button_login">登录</string>
    <string name="register_button_login_by_name">账号登陆</string>
    <string name="register_check_number_rollback">验证码已经发送,30分钟内有效</string>
    <string name="register_check_number_succeed">验证成功</string>
    <string name="register_button_get_check_number_clicked">s后再获取</string>
    <string name="register_error_info_not_completed">资料不完整</string>
    <string name="register_error_check_number">验证码错误或过期</string>
    <string name="register_error_user_phone_text">手机号格式错误</string>
    <string name="register_error_password_null">密码不可为空</string>

    <string name="register_error_user_phone_length">手机号码长度不对</string>


    <string name="action_logout_alert_message">确定更换账号么？之前保留的账号信息将被删除。</string>
    <string name="action_logout">更换帐号</string>
    <string name="action_about_app">关于与建议</string>
    <string name="network_error">网络错误，请检查您的网络连接</string>
    <string name="dialog_OK">确定</string>
    <string name="dialog_Cancel">取消</string>
    <string name="dialog_error_title">错误</string>
    <string name="dialog_message_title">提示</string>
    <string name="dialog_message_success">成功</string>
    <string name="dialog_text_wait">请等待</string>
    <string name="title_activity_asd">asd</string>



    <string name="setuserinfo_title_text">个人信息</string>
    <string name="setuserinfo_check_give_up">确定放弃？</string>
    <string name="setuserinfo_error_commit">提交信息错误</string>
    <string name="setuserinfo_error_IDnumber_length">身份证号码长度错误</string>
    <string name="setuserinfo_error_phone_length">手机号码长度错误</string>
    <string name="setuserinfo_error_user_name_null">用户名不能为空</string>
    <string name="setuserinfo_error_password_short">密码过短</string>
    <string name="setuserinfo_error_check_password">验证密码不一致</string>

    <string name="fragment_right_button_finished_order"> 已完成订单</string>
    <string name="fragment_right_button_unpaied_order"> 未付款订单</string>
    <string name="fragment_right_button_paied_order"> 已付款订单</string>

    <string name="fragment_right_button_my_passenger_info"> 我的乘客信息</string>
    <string name="fragment_right_button_my_public_route"> 我发布的路线</string>

    <string name="fragment_right_button_version_info"> 版本信息</string>
    <string name="fragment_right_button_logout">退出当前账号</string>
    <string name="fragment_right_button_user_name"> USERNAME</string>
    <string name="fragment_right_button_custom_service"> 客服热线</string>
    <string name="fragment_title_title_text">出行路线</string>
    <string name="fragment_center_custom_service_number">  0574-88888888</string>

    <string name="fragment_user_info_change_pwd_button">完成</string>
    <string name="fragment_user_info_change_pwd_editText_pwd">请输入新密码</string>
    <string name="fragment_user_info_change_pwd_editText_pwd_again">请再次密码</string>
    <string name="fragment_user_info_change_pwd_toast_success">重置密码成功</string>
    <string name="fragment_user_info_change_phone_hint">暂时不支持修改手机号</string>

    <string name="persondetail_title_text">账户管理</string>
    <string name="persondetail_user_img">头像</string>
    <string name="persondetail_textview_change_password">修改密码</string>
    <string name="persondetail_textview_change_mail">密保邮箱</string>
    <string name="persondetail_textview_change_phone">密保手机</string>

</resources>