<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical"
    tools:context=".SplashActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dip"
        android:text="@string/settings_title"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/shape"
        android:orientation="horizontal"
        android:paddingBottom="15dip"
        android:paddingTop="15dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensitivity"
            android:textSize="20sp" />

        <TextView
            android:id="@id/sensitivity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip">

        <TextView
            android:id="@id/low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/low" />

        <SeekBar
            android:id="@id/sensitivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_toLeftOf="@id/high"
            android:layout_toRightOf="@id/low"
            android:max="10"
            android:maxHeight="5dip"
            android:minHeight="5dip"
            android:progress="3" />

        <TextView
            android:id="@id/high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/high" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dip"
        android:layout_marginRight="35dip"
        android:text="@string/sensitivity_info" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="15dip"
        android:background="@drawable/shape">

        <TextView
            android:id="@id/step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="15dip"
            android:paddingTop="15dip"
            android:text="@string/step_length"
            android:textSize="20sp"

            />

        <TextView
            android:id="@id/step_lenth_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/step"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:layout_toRightOf="@id/step" />
    </RelativeLayout>

    <SeekBar
        android:id="@id/step_lenth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dip"
        android:layout_marginRight="35dip"
        android:max="12"
        android:maxHeight="5dip"
        android:minHeight="5dip"
        android:progress="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dip"
        android:layout_marginRight="35dip"
        android:text="@string/setp_length_info_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dip"
        android:layout_marginRight="35dip"
        android:text="@string/setp_length_info_2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="15dip"
        android:background="@drawable/shape"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="15dip"
        android:paddingTop="15dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weigth"
            android:textSize="20sp"

            />

        <TextView
            android:id="@id/weight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip" />
    </LinearLayout>

    <SeekBar
        android:id="@id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dip"
        android:layout_marginRight="35dip"
        android:max="50"
        android:maxHeight="5dip"
        android:minHeight="5dip"
        android:progress="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dip"
        android:layout_marginRight="35dip"
        android:text="@string/weight_info" />


    <Button
        android:id="@id/save"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_home_yellow"
        android:onClick="onClick"

        android:text="@string/save" />


</LinearLayout>