<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#f5f5f5"
    tools:context=".RegisterActivity">

    <com.cn.stepcounter.utils.TitleView
        android:id="@+id/register_title_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"></com.cn.stepcounter.utils.TitleView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#ffffff"
        android:layout_marginBottom="2dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/iphone" />

        <EditText
            android:id="@+id/register_phone_number"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="phone"
            android:hint="@string/register_edittext_phone"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/iphone" />

        <EditText
            android:id="@+id/register_check_number"
            android:layout_width="220dp"
            android:layout_height="fill_parent"
            android:hint="@string/register_edittext_check_number"
            android:inputType="number"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center"
            android:background="@drawable/selector_home_green"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:id="@+id/register_button_get_check_number"
            android:text="@string/register_button_get_check_number"/>

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_home_yellow"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:text="@string/reginter_button_login"
        android:id="@+id/register_button_login" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:textColor="#8c8a8b"
        android:textSize="16sp"
        android:text="@string/register_button_login_by_name"
        android:id="@+id/register_button_login_by_name" />
</LinearLayout>



<!--</RelativeLayout>-->