<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#f5f5f5"
    tools:context=".LoginActivity">

    <com.cn.stepcounter.TitleView
        android:id="@+id/login_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"></com.cn.stepcounter.TitleView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#ffffff"
        android:layout_marginBottom="2dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/iphone" />

        <EditText
            android:id="@+id/editText_userPhone"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="phone"
            android:hint="@string/login_edittext_hint_input_phone"></EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#ffffff">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/iphone" />

        <EditText
            android:id="@+id/editText_userPassword"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/login_edittext_hint_input_password"
            android:inputType="textPassword"></EditText>

    </LinearLayout>

    <Button
        android:id="@+id/button_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@android:color/transparent"
        android:textColor="#8c8a8b"
        android:text="@string/login_button_forget_password" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/selector_home_yellow"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:text="@string/login_button_login"/>

</LinearLayout>








